# daw_read_write

./: CMakeLists.txt  README.md
cmake/: daw-read-writeConfig.cmake.in
cmake/test_project/: CMakeLists.txt  test.cpp
include/daw/io/: daw_io_base.h  daw_io_error.h  daw_io_fd_wrap.h  daw_peekable_read_proxy.h  daw_read_base.h  daw_read_cfile.h  daw_read_fd.h  daw_read_istream.h  daw_read_pointer.h  daw_read_proxy.h  daw_read_span.h  daw_read_string_view.h  daw_read_write.h  daw_read_write_fd.h  daw_readable_input.h  daw_type_writers.h  daw_writable_output.h  daw_write_base.h  daw_write_cfile.h  daw_write_fd.h  daw_write_iterator.h  daw_write_ostream.h  daw_write_pointer.h  daw_write_proxy.h  daw_write_span.h  daw_write_stream.h  daw_write_string.h  daw_write_to_buffer.h  type_writers.h
include/daw/io/type_writers/: daw_integer_writer.h
include/daw/io/util/: daw_io_algorithms.h
tests/: CMakeLists.txt
tests/cmake/: test_compiler_options.cmake
tests/src/: daw_read_write_test.cpp
